--- a/main.html
+++ b/main.html
@@ -11,13 +11,13 @@
 	<nav>
 		<ul>
 			<li>
-				<a href="#home1">Home1</a>
+				<a href="#home">Home</a>
 			</li>
 			<li>
-				<a href="#home2">Home2</a>
+				<a href="#about">About us</a>
 			</li>
 			<li>
-				<a href="#home3">Home3</a>
+				<a href="#contact">Contact us</a>
 			</li>
 		</ul>
 	</nav>
